# KnowledgeHub-AI-Plataforma-Multimodal-RAG

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  documents.py  health.py  users.py  workspaces.py
backend/app/core/: config.py  exceptions.py  lifespan.py  logging.py  security.py
backend/app/db/: dependencies.py  session.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  chat.py  document.py  message.py  user.py  workspace.py
backend/app/rag/: openai_client.py
backend/app/rag/chunking/: __init__.py
backend/app/rag/embeddings/: __init__.py
backend/app/rag/generation/: __init__.py
backend/app/rag/loaders/: __init__.py
backend/app/rag/prompts/: __init__.py
backend/app/repositories/: chat_repository.py  document_repository.py  message_repository.py  user_repository.py  workspace_repository.py
backend/app/schemas/: auth.py  chat.py  document.py  message.py  workspace.py
backend/app/services/: auth_service.py  chat_service.py  document_service.py  workspace_service.py
backend/app/storage/: local.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppHeader.tsx  AuthLayout.tsx  ConfirmDialog.tsx  RequireAuth.tsx  Spinner.tsx  TextField.tsx
frontend/src/pages/: Chat.tsx  Documents.tsx  Login.tsx  Register.tsx  Workspaces.tsx
(+4 files in other folders)
