[project]
name = "KnowledgeHub-AI-plataforma-multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt<4.1",
    "email-validator>=2.2.0",
    "fastapi>=0.139.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]
